# arcum

./: .gitignore  Cargo.toml  frames to output.py  video to frames.py
src/: main.rs
src/commands/: hash.rs  image.rs  mod.rs  other.rs  owner.rs  word_chain.rs
