[package]
name = "arcum"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
poise = "0.6.1"
quick-xml = { version = "0.26", features = ["serialize"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand_chacha = "0.3"
rand = "0.8"
ndarray = "0.15"
num-complex = "0.4"
image = "0.24.5"
bytes = "1"
sha2 = "0.10"
argon2 = "0.3"
tokio-stream = "0.1.17"
